# Blast

./: .gitignore  CMakeLists.txt  blast.sublime-workspace  build.bat
include/glad/: glad.h
src/: Blast.hpp  desiredapplicationstructure.txt  main.cpp
src/Components/: Block.hpp  Component.hpp
src/Core/: App.cpp  App.hpp
src/Core/Rendering/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/Core/Window/: Event.cpp  Event.hpp  PlatformSpecificFunctions.hpp  Window.cpp  Window.hpp  WindowSettings.hpp
src/Math/: Mat4.cpp  Mat4.hpp  Vec3.cpp  Vec3.hpp
src/Styling/: Color.hpp  ColorTable.hpp  Style.hpp  StyleCollection.cpp  StyleCollection.hpp
